Fix main overflow

--- a/docs/assets/styles/style.css
+++ b/docs/assets/styles/style.css
@@ -691,6 +691,7 @@ pre[class*=language-] {
 main {
   width: 100%;
   position: relative;
+  overflow: hidden;
 }
 main:before {
   content: " ";
